--- a/app/components/WhatWeDid/components/Project/project.module.css
+++ b/app/components/WhatWeDid/components/Project/project.module.css
@@ -6,7 +6,7 @@
 
 .imageContainer {
   width: 100%;
-  height: 40rem;
+  height: 30rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,8 +16,8 @@
 
 .image {
   /* filter: invert(1); */
-  width: 100%;
-  scale: 1.2;
+  width: 90%;
+  scale: 1;
   object-fit: contain;
 }
 
